--- a/assets/login.html
+++ b/assets/login.html
@@ -22,7 +22,8 @@
            <input class="p-3 form-control border-2 mt-4" type="text" placeholder="Email or phone number">
            <input class="p-3 form-control border-2 mt-3" type="password" placeholder="Password">
            <div class="mt-4">
-             <a href="home.html" type="button" class="p-2 form-control btn btn-primary rounded-pill p-2"><b>Sign in</b></a>
+             <a href="home.html" type="button" class="form-control btn btn-primary rounded-pill px-2 fw-bold">Sign in</a>
+             </div>
          </div>
        </div>
      </div>
