--- a/index.html
+++ b/index.html
@@ -7,17 +7,11 @@
     <nav class="navbar sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/img/logo.png" alt="Logo" width="120" height="40" class="d-inline-block align-text-top">
+                <img src="assets/img/logo.png" width="120" height="40" class="d-inline-block">
             </a>
             <ul class="mt-0 navbar justify-content-end navbar-custom">
-                <div class="ms-4 ">
-                  <a href="assets/register.html" style="color:black;text-decoration:none;"><b>Join now</b></a>
-                </div>
-                <div class="ms-5">
-                  <a type="button" class="btn btn-outline-primary rounded-pill button-custom" style="text-decoration:none;" href="assets/login.html">
-                    <b>Sign In</b>
-                  </a>
-                </div>
+            <a href="assets/register.html" style="color:black;text-decoration:none;" class="px-3 fw-bold">Join now</a>
+            <a type="button" class="mx-3 px-3 fw-bold btn btn-outline-primary rounded-pill " style="text-decoration:none;" href="assets/login.html">Sign In</a>
             </ul>
 
         </div>
@@ -28,8 +22,7 @@
             <div class=" col-lg-6 col-md-12 content-div">
                 <h1 class="display-4" style="color:#c32100;">Welcome to your professional community.</h1>
                 <div style="width:25em;">
-                  <button type="button" class="form-control mt-3 btn btn-outline-dark rounded-pill button-custom" style="height:3em;">Continue with Google</button>
-                  <button type="button" class="form-control mt-3 btn btn-outline-dark rounded-pill button-custom" style="height:3em;"><b>Sign in with email</b></button>
+                  <a href="assets/login.html" type="button" class="fw-bold form-control mt-3 btn btn-outline-dark rounded-pill button-custom">Sign in with email</a>
                 </div>
             </div>
             <div class="col-lg-6 col-md-12">
