--- a/assets/home.html
+++ b/assets/home.html
@@ -21,7 +21,7 @@
 
 
                 <li class="nav-li ">
-                  <a class="d-flex align-items-center flex-column" href="#">
+                  <a class="d-flex align-items-center flex-column" href="jobs.html">
                     <svg class="nav-svg" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g><path fill="none" d="M0 0h24v24H0z"></path><path d="M12 1a5 5 0 0 1 5 5v2h3a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1h3V6a5 5 0 0 1 5-5zm5 10h-2v1a1 1 0 0 0 1.993.117L17 12v-1zm-8 0H7v1a1 1 0 0 0 1.993.117L9 12v-1zm3-8a3 3 0 0 0-2.995 2.824L9 6v2h6V6a3 3 0 0 0-2.824-2.995L12 3z"></path></g></svg>
                     <p class="small m-0">Jobs</p>
                   </a>
@@ -32,12 +32,7 @@
                     <p class="small m-0">Messaging</p>
                   </a>
                 </li>
-                <li class="nav-li ">
-                  <a class="d-flex align-items-center flex-column position-relative" href="#">
-                    <svg class="nav-svg" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M256 464c22.779 0 41.411-18.719 41.411-41.6h-82.823c0 22.881 18.633 41.6 41.412 41.6zm134.589-124.8V224.8c0-63.44-44.516-117.518-103.53-131.041V79.2c0-17.682-13.457-31.2-31.059-31.2s-31.059 13.518-31.059 31.2v14.559c-59.015 13.523-103.53 67.601-103.53 131.041v114.4L80 380.8v20.8h352v-20.8l-41.411-41.6z"></path></svg>
-                    <p class="small m-0">Notifications</p>
-                  </a>
-                </li>
+
 
 
                 <li class="nav-item dropdown">
@@ -128,25 +123,20 @@
 
               </div>
 
-              <div class="buttons-div">
+              <div class="buttons-div d-flex justify-content-start">
                 <button class="four-buttons p-2 d-flex align-items-center">
                   <svg class="me-2" stroke="currentColor" fill="#378FE9" stroke-width="0" viewBox="0 0 24 24" height="1.6em" width="1.6em" xmlns="http://www.w3.org/2000/svg"><circle cx="7.499" cy="9.5" r="1.5"></circle><path d="M10.499 14L8.999 12 5.999 16 8.999 16 11.999 16 17.999 16 13.499 10z"></path><path d="M19.999,4h-16c-1.103,0-2,0.897-2,2v12c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2V6C21.999,4.897,21.102,4,19.999,4z M3.999,18V6h16l0.002,12H3.999z"></path></svg>
                   <span>
                     Photo
                   </span>
                 </button>
-                <button class="four-buttons p-2 d-flex align-items-center">
+                <button class="four-buttons p-2 d-flex align-items-center mx-3">
                   <svg class="me-2" stroke="currentColor" fill="#A872E8" stroke-width="0" viewBox="0 0 448 512" height="1.2em" width="1.3em" xmlns="http://www.w3.org/2000/svg"><path d="M352 160v-32C352 57.42 294.579 0 224 0 153.42 0 96 57.42 96 128v32H0v272c0 44.183 35.817 80 80 80h288c44.183 0 80-35.817 80-80V160h-96zm-192-32c0-35.29 28.71-64 64-64s64 28.71 64 64v32H160v-32zm160 120c-13.255 0-24-10.745-24-24s10.745-24 24-24 24 10.745 24 24-10.745 24-24 24zm-192 0c-13.255 0-24-10.745-24-24s10.745-24 24-24 24 10.745 24 24-10.745 24-24 24z"></path></svg>
                   <span>
                     Job
                   </span>
                 </button>
-                <button class="four-buttons p-2 d-flex align-items-center">
-                  <svg class="me-2" stroke="currentColor" fill="#E16745" stroke-width="0" viewBox="0 0 24 24" height="1.6em" width="1.6em" xmlns="http://www.w3.org/2000/svg"><g><path fill="none" d="M0 0h24v24H0z"></path><path d="M20 22H4a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h16a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1zm-1-2V4H5v16h14zM7 6h4v4H7V6zm0 6h10v2H7v-2zm0 4h10v2H7v-2zm6-9h4v2h-4V7z"></path></g></svg>
-                  <span>
-                    Write article
-                  </span>
-                </button>
+
               </div>
             </div>
 
