--- a/assets/home.html
+++ b/assets/home.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <title>Home Page | LinkedIn</title>
   </head>
   <body>
 
