--- a/assets/register.html
+++ b/assets/register.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" href="css/bootstrap.min.css" media="all" />
     <link rel="stylesheet" href="css/style.css">
+    <title>Join LinkedIn</title>
   </head>
   <body>
 
@@ -21,9 +22,10 @@
           <input class="px-3 form-control border-2" type="text">
           <label class="fw-bold small mt-3">Password</label>
           <input class="px-3 form-control border-2" type="password">
+	  <p class="my-3 text-secondary" style="text-align:center;font-size:11px;">By clicking Agree & Join or Continue, you agree to the LinkedIn User Agreement, Privacy Policy, and Cookie Policy.</p>
           <div class="mt-4">
             <a href="home.html" type="button" class="form-control btn btn-primary rounded-pill px-2 fw-bold">Agree & Join</a>
-            </div>
+          </div>
         </div>
       </div>
     </div>
