--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" media="all" />
     <link rel="stylesheet" href="assets/css/style.css">
+    <title>LinkedIn</title>
   </head>
   <body>
     <nav class="navbar sticky-top">
