--- a/assets/home.html
+++ b/assets/home.html
@@ -72,7 +72,7 @@
                   </div>
 
                   <div class="card-body d-flex flex-column align-items-center">
-                    <h5 class="card-title fw-bold">User</h5>
+                    <h5 class="card-title fw-bold">Cradily</h5>
                     <p class="small card-text m-0">Web Developer</p>
                   </div>
 
@@ -218,16 +218,17 @@
               <h6 class="fw-bold card-title m-0">Add to your feed</h6>
             </div>
             <div class="card-body pt-0">
+
               <div class="d-flex mb-3">
-                <img class="me-3 suggestions-logo" src="a.png">
+		<img class="suggestions-logo me-3" src="img/cacturne.png">
                 <div>
                   <a href="#" class="text-decoration-none">
                     <span class="suggestions-name">
-                      Account
+                      Cacturne
                     </span>
                   </a>
 
-                  <p class="mb-2 small-font-size"></p>
+                  <p class="mb-2 small">Lorem ipsum dolor sit amet, consectetur</p>
 
                   <button class="p-1 bg-white suggestions-buttons">
                     Follow
@@ -235,6 +236,28 @@
 
                 </div>
               </div>
+
+
+
+              <div class="d-flex mb-3">
+		<img class="suggestions-logo me-3" src="img/swampert.png">
+                <div>
+                  <a href="#" class="text-decoration-none">
+                    <span class="suggestions-name">
+                      Swampert
+                    </span>
+                  </a>
+
+                  <p class="mb-2 small">Lorem ipsum dolor sit amet, consectetur</p>
+
+                  <button class="p-1 bg-white suggestions-buttons">
+                    Follow
+                  </button>
+
+                </div>
+              </div>
+
+
 
             </div>
           </div>
@@ -268,6 +291,8 @@
 
 
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/Comment.js"></script>
+    <script src="js/User.js"></script>
     <script src="js/Post.js"></script>
     <script src="js/Action.js"></script>
     <script src="js/main.js"></script>
