--- a/assets/profile.html
+++ b/assets/profile.html
@@ -51,14 +51,14 @@
         </div>
     </nav>
 
-    <main class="main position-relative pt-3 pt-lg-4">
-      <div class="container">
+    <main class="main pt-3 pt-lg-4">
+      <div class="container mt-5">
         <div class="row d-flex justify-content-start">
 
 
 
 
-          <div class="col-12 col-lg-6 col-xl-9 row d-flex justify-content-center p-1 pt-0 m-0 pe-lg-4">
+          <div id="userInformation" class="col-12 col-lg-6 col-xl-9 row d-flex justify-content-center p-1 pt-0 m-0 pe-lg-4">
             <div class="max-width p-0">
 
               <div style="height:33em;" id="profile-card" class="bg-white mt-1 mt-lg-0 px-3 py-2">
@@ -67,9 +67,9 @@
                   <img class="me-3" id="profile-page-photo" src="img/profile.png">
                 </div>
                 <div class="px-3" id="userInformation">
-                  <h2 class="fw-bold">User</h2>
-                  <p>Job title</p>
-                  <p class="small">Location - <a id="contactInfo" style="cursor:pointer;" class="text-primary">Contact info</a></p>
+                  <h2 class="fw-bold">Cradily</h2>
+                  <p>Web Developer</p>
+                  <p class="small">Tegucigalpa, Honduras - <a id="contactInfo" style="cursor:pointer;" class="text-primary">Contact info</a></p>
                   <p class="small">0 connections</p>
                   <a type="button" class="fw-bold px-3 btn btn-primary rounded-pill">+ Connect</a>
                   <a style="border:1px solid #0d6efd;color:#0d6efd;" type="button" class="fw-bold px-3 btn bg-white rounded-pill">Message</a>
@@ -77,72 +77,7 @@
               </div>
             </div>
 
-            <div class="mt-3 max-width p-0">
-
-              <div id="profile-about" class="bg-white px-3">
-                <div class="p-3">
-                  <h4 class="fw-bold">About</h4>
-                  <p class="small">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                  </p>
-                </div>
-              </div>
-            </div>
-
-
-            <div class="mt-3 max-width p-0">
-
-              <div id="profile-experience" class="bg-white px-3">
-                <div class="p-3">
-                  <h4 class="fw-bold">Experience</h4>
-                  <p class="small">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		  </p>
-                </div>
-              </div>
-            </div>
-
-
-            <div class="mt-3 max-width p-0">
-
-              <div id="profile-education" class="bg-white px-3">
-                <div class="p-3">
-                  <h4 class="fw-bold">Education</h4>
-                </div>
-              </div>
-            </div>
-
-
-            <div class="mt-3 max-width p-0">
-
-              <div id="profile-awards" class="bg-white px-3">
-                <div class="p-3">
-                  <h4 class="fw-bold">Licenses & certifications</h4>
-                </div>
-              </div>
-            </div>
-
-
-            <div class="mt-3 max-width p-0">
-
-              <div id="profile-lang" class="bg-white px-3">
-                <div class="p-3">
-                  <h4 class="fw-bold">Skills</h4>
-                </div>
-              </div>
-            </div>
-
-
-            <div class="mt-3 max-width p-0">
-
-              <div id="profile-lang" class="bg-white px-3">
-                <div class="p-3">
-                  <h4 class="fw-bold">Languages</h4>
-                </div>
-              </div>
-            </div>
-
-
+    
 
 
 
@@ -159,7 +94,7 @@
 	  	<div class="modal-dialog">
 	  		<div class="modal-content">
 	  			<div class="modal-header">
-	  				<h1 class="modal-title fs-5 fw-bold">User</h1>
+	  				<h1 class="modal-title fs-5 fw-bold">Cradily</h1>
         		<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 	  			</div>
 	  			<div class="modal-body">
